# python-pipes-ql

./: README.md  my_pipes.py  pyproject.toml  real_pipes.py  run.sh  test_pipes.py  valids.py
