[tool.poetry]
name = "python-pipes-disection"
version = "0.1.0"
description = "Inspecting Pipes"
authors = ["CristhianMotoche <cristhian.motoche@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pipe = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
